# ScaleStore

backend/: CMakeLists.txt
backend/scalestore/: Config.cpp  Config.hpp  ScaleStore.cpp  ScaleStore.hpp
backend/scalestore/rdma/: CommunicationManager.hpp  MessageHandler.cpp  MessageHandler.hpp
backend/scalestore/rdma/messages/: Messages.hpp
backend/scalestore/storage/buffermanager/: AccessFunctors.hpp  AsyncReadBuffer.hpp  AsyncWriteBuffer.cpp  AsyncWriteBuffer.hpp  BufferFrame.hpp  Buffermanager.cpp  Buffermanager.hpp  Buffermanager.tpp  PageIdManager.cpp  PageIdManager.h  PageIdManagerDefs.h  PageProvider.cpp  PageProvider.hpp  Partition.cpp  Partition.hpp
backend/scalestore/storage/buffermanager/bucketsmanager/: Bucket.h  BucketManager.cpp  BucketManager.h  BucketManagerDefs.h  BucketManagerMessageHandler.cpp  BucketManagerMessageHandler.h  BucketManagerOld.h  BucketMessage.h  BucketShuffler.h  BucketsDisjointSets.h  CMakeLists.txt  GenericDisjointSets.cpp  GenericDisjointSets.h  LocalBucketsMergeJob.h  Message.h  MessagesEnum.h  Page.h  RemoteBucketShuffleJob.h  cluster.h  main.cpp  tempBucket.cpp  tempBucket.h  testUtils.h  tests.h  tools.h
backend/scalestore/utils/: BatchQueue.hpp  MemoryManagement.hpp
frontend/: CMakeLists.txt
frontend/ycsb/: ycsb.cpp  ycsbYuval.cpp
